--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         Products
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="./products.html">Product 1</a></li>
-                        <li><a class="dropdown-item" href="./products.html">Product 2</a></li>
+                        <li><a class="dropdown-item" href="">Product 1</a></li>
+                        <li><a class="dropdown-item" href="">Product 2</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -98,7 +98,7 @@
             </p>
         </div>
         <footer class="text-center fixed-bottom">
-            Made By <span>Deepika</span>
+            Made By Karamchand Subash
         </footer>
     </section>
         </body>
