--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Home</a>
+                    <a class="nav-link active" aria-current="page" href="https://karamchandsubash.github.io/home/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -34,7 +34,7 @@
                         Products
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="">Product 1</a></li>
+                        <li><a class="dropdown-item" href="https://karamchandsubash.github.io/pg1/" target="_blank">Product 1</a></li>
                         <li><a class="dropdown-item" href="">Product 2</a></li>
                         <li>
                             <hr class="dropdown-divider">
